# visor

./: .gitignore  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.mjs
.github/workflows/: release.yml
src/: hero.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  commands.rs  commands_legacy.rs  db.rs  lib.rs  logging.rs  scheduler.rs  stock.rs
src-tauri/src/commands/: dashboard.rs  defaults.rs  exports.rs  hfsql.rs  lines.rs  logs.rs  mappings.rs  mod.rs  production.rs  sql_queries.rs  sql_server.rs
src-tauri/src/stock/: encoding.rs  fs_utils.rs  mod.rs  processor.rs  registry.rs  transforms.rs  watcher.rs
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/app/activity/: page.tsx
src/app/data-exchange/ateis/: HfsqlConfigTab.tsx  page.tsx
src/app/data-exchange/ateis/connexion/: page.tsx
src/app/data-exchange/ateis/of/: page.tsx
src/app/data-exchange/ateis/produit/: page.tsx
src/app/data-exchange/logitron/of/: page.tsx
src/app/data-exchange/logitron/produit/: page.tsx
src/app/journaux/: page.tsx
src/app/lines/: page.tsx
src/app/mapping/: page.tsx
src/app/projects/: page.tsx
src/app/settings/: page.tsx
src/app/sql-queries/: page.tsx
src/components/: Titlebar.tsx  VisorLogo.tsx
src/shared/constants/: sidebar.ts
src/shared/contexts/: sidebar.tsx  theme.tsx
src/shared/tauri/: window.ts
src/shared/ui/: AddLineModal.tsx  ConfirmDialog.tsx  Sidebar.tsx  Titlebar.tsx
src/stores/: schedulerStore.ts
