[package]
name = "app"
version = "0.3.5"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "sqlite"] }
notify = "6.1.1"
csv = "1.3"
chrono = "0.4"
tiberius = { version = "0.12", default-features = false, features = ["rustls", "tds73", "rust_decimal", "chrono"] }
rust_decimal = "1"
tokio-util = { version = "0.7", features = ["compat"] }
encoding_rs = "0.8"
encoding_rs_io = "0.1"
odbc-api = { version = "4.0", features = ["odbc_version_3_5"] }
